donation page done

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate For Humanity</title>
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <!-- daisy ui and tailwind Cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-white">
     <!-- header start -->
-    <header class="bg-white">
-        <div class="navbar bg-amber-50 shadow-sm flex justify-around pt-4 pb-8">
+    <header class="bg-white mb-40">
+        <div class="navbar bg-amber-50 shadow-sm flex justify-around pt-4 pb-8  fixed top-0 z-50">
             <!-- button -->
             <div class="">
                 <a href="#" class="px-7 py-2 bg-lime-400 rounded-lg text-black text-lg font-semibold">Blog</a>
@@ -30,12 +31,73 @@
     </header>
      <!-- header end -->
       <main class="lg:mx-24 mx-5">
-          <!-- dante and history tab section start -->
-       <section class="mt-20 mb-8 flex items-center gap-5 justify-center">
+        <!-- dante and history tab section start -->
+       <section class="mt-20 mb-8 flex items-center gap-5 justify-center top-60">
         <a href="#" class="px-6 py-3 bg-lime-400 rounded-sm text-black text-lg font-semibold">Donation</a>
         <a style="height: 52px; width: 120px;" class="btn btn-outline">History</a>
        </section>
-      <!-- dante and history tab section end -->
+       <!-- dante and history tab section end -->
+        <!-- card section start -->
+       <section>
+        <!-- card 1 -->
+         <div class="card card-side bg-base-100 shadow-sm my-5">
+            <figure class="w-6/12 p-5"> <img class="bg-cover bg-no-repeat rounded-sm" src="./img/noakhali.png">
+            </figure>
+            <div class="card-body w-6/12">
+                <div class="flex items-center justify-center gap-2 bg-gray-100 w-32 h-10 p-2 rounded-sm" href="">
+                    <img src="./img/coin.png" alt="">
+                    <h1 class="text-lime-600 text-sm font-semibold"><span class="text-black">10101</span> BDT</h1>
+                </div>
+                <h2 class="card-title font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
+                <p> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+                <div class="mt-10">
+                    <form action="">
+                        <input type="text" placeholder="Write Donation Amount" class="input w-full" />
+                        <button class="w-full mt-5 bg-lime-300 py-2 rounded-sm text-black font-bold text-lg">Donate now</button>
+                    </form>
+                </div>
+            </div>
+            </div>
+        <!-- card 2 -->
+         <div class="card card-side bg-base-100 shadow-sm my-5">
+            <figure class="w-6/12 p-5"> <img class="bg-cover bg-no-repeat rounded-sm" src="./img/feni.png">
+            </figure>
+            <div class="card-body w-6/12">
+                <div class="flex items-center justify-center gap-2 bg-gray-100 w-32 h-10 p-2 rounded-sm" href="">
+                    <img src="./img/coin.png" alt="">
+                    <h1 class="text-lime-600 text-sm font-semibold"><span class="text-black">10101</span> BDT</h1>
+                </div>
+                <h2 class="card-title font-bold">Donate for Flood Relief in Feni,Bangladesh</h2>
+                <p> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
+                <div class="mt-10">
+                    <form action="">
+                        <input type="text" placeholder="Write Donation Amount" class="input w-full" />
+                        <button class="w-full mt-5 bg-lime-300 py-2 rounded-sm text-black font-bold text-lg">Donate now</button>
+                    </form>
+                </div>
+            </div>
+            </div>
+        <!-- card 1 -->
+         <div class="card card-side bg-base-100 shadow-sm my-5">
+            <figure class="w-6/12 p-5"> <img class="bg-cover bg-no-repeat rounded-sm" src="./img/quota-protest.png">
+            </figure>
+            <div class="card-body w-6/12">
+                <div class="flex items-center justify-center gap-2 bg-gray-100 w-32 h-10 p-2 rounded-sm" href="">
+                    <img src="./img/coin.png" alt="">
+                    <h1 class="text-lime-600 text-sm font-semibold"><span class="text-black">10101</span> BDT</h1>
+                </div>
+                <h2 class="card-title font-bold">Aid for Injured in the Quota Movement</h2>
+                <p>The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
+                <div class="mt-10">
+                    <form action="">
+                        <input type="text" placeholder="Write Donation Amount" class="input w-full" />
+                        <button class="w-full mt-5 bg-lime-300 py-2 rounded-sm text-black font-bold text-lg">Donate now</button>
+                    </form>
+                </div>
+            </div>
+            </div>
+       </section>
+        <!-- card section start -->
       </main>
     <!-- js install -->
     <script src="./script.js"></script>
